<?xml version="1.0"?>
<package format="2">
  <name>socket_can</name>
  <version>0.0.0</version>
  <description>The socket_can package</description>

  <maintainer email="shiveshkhaitan@gmail.com">Shivesh Khaitan</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
